--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "@mui/material": "^5.10.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "downloadjs": "^1.4.7",
     "express": "^4.18.1",
     "mongoose": "^6.5.2"
   }
