--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.1",
     "axios": "^0.27.2",
+    "react-dropdown": "^1.11.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
